# bookmarks

./: .env  Makefile  stack.yml
back/: Cargo.toml  Dockerfile
back/.sqlx/: query-1ba97c134734392a508921578381291c6d393bcf869d22b1c9f67d42614b98a7.json  query-20400ac3db5e873ec974061d95ed81648bd154afea71411c5238b5afd82495fa.json  query-2acd6205b12b1e9cadac7bcaa39a3a9bcc15faa4b8ffc881bdd953763994b987.json  query-33afcd41b570b0d10fe26b9a9703cbb929f677b520e58c3968d8b0fe430c6207.json  query-867f7e72440f7c40bff8a1df9d21c9432e08f094e4caced2e467ba71aacd922d.json  query-ac912c32a8b377428f4f182f646e322ab5ecb3c52d546076775e2c0939083095.json  query-c8afac6f1f025ea942713e05a8714c2ad48aba6714683118b2acc65d39118a5f.json  query-e7bb29ece857bd5226d69c520d75b008637dfa09c0a80b5701b086fcb2093a99.json  query-f7d8b12fb899b85099e1834f59b28c61c0f699c87ec37c9210b74d9add6575df.json
back/migrations/: 20250303222104_init.sql
back/src/: config.rs  data.rs  error.rs  id.rs  main.rs
back/src/auth/: cookie.rs  mod.rs  password.rs  token.rs  user_id.rs
back/src/data/: bookmarks.rs  mod.rs  sessions.rs  users.rs
extensions/chrome/: index.html  manifest.json
front/: index.html  package.json  prettier.config.js  tsconfig.json  vite.config.js
front/public/: _headers
front/src/: auth.tsx  db.tsx  delete-bookmark.tsx  edit-bookmark.tsx  entry.tsx  envs.ts  index.tsx  new-bookmark.tsx  settings.tsx  styles.css  the-input.tsx
