[package]
name = "back"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.97"
thiserror = "2.0.12"
hyper = "1.6.0"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
envy = "0.4.2"
once_cell = "1.20.3"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-stream = { version = "0.1.17", features = ["full", "tokio-util"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
argon2 = "0.5.3"
ulid = "1.2.0"
